# agent-voice-bot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/agent-voice-bot-setup/: SKILL.md
.agents/skills/nvidia-riva-speech/: SKILL.md
bot/: .env.example  README.md  pyproject.toml
bot/configs/: direct-hermes.env  direct-openclaw.env  nemoclaw-deepagents.env  nemoclaw-openclaw.env  nemohermes.env
bot/evals/: inject_nemo_events.py  nemo_features_manifest.yaml  nemohermes_manifest.yaml  verify_nemo_telemetry.py
bot/evals/scenarios/: quick_question_while_working.yaml  return_path.yaml  stop_agent_loop.yaml  voice_loop_basic.yaml  voice_loop_stays_responsive.yaml
bot/src/agent_voice_bot/: agent_loop.py  agent_worker.py  application.py  bot.py  config.py  nemohermes.py  workers.py
bot/src/agent_voice_bot/core/: __init__.py  approvals.py  models.py  presentation.py  runtime.py
bot/src/agent_voice_bot/features/: __init__.py  factory.py  guarded.py  observed.py  tapped.py  telemetry.py
bot/src/agent_voice_bot/nemo/: __init__.py  features.py  file_source.py  observer.py
bot/src/agent_voice_bot/runtimes/: __init__.py  factory.py
bot/src/agent_voice_bot/services/: __init__.py  speech.py  voice.py
bot/tests/: test_agent_loop.py  test_configuration_matrix.py  test_core_runtime.py  test_eval_scenarios.py  test_nvidia_speech.py  test_runtime_end_to_end.py
docs/: agent-runtime-interface.md
evals/: manifest.yaml
evals/scenarios/: delegates_agent_work.yaml  forwards_followup.yaml  voice_then_agent_world_cup.yaml
nemoclaw/: README.md
nemoclaw/ollama/: nemotron-3-nano-partial20.Modelfile
nemoclaw/scripts/: setup.sh  smoke.sh  status.sh
nemodeepagents/: README.md
nemodeepagents/scripts/: setup.sh  smoke.sh  status.sh
nemohermes/: README.md
nemohermes/scripts/: setup.sh  smoke.sh  status.sh
skills/: README.md
skills/nemotron-local-llm/: SKILL.md
src/agent_voice_bot/: __init__.py  agent_loop.py  bot.py  config.py  nemohermes.py  workers.py
tests/: test_agent_loop.py  test_eval_scenarios.py
