[project]
name = "agent-voice-bot"
version = "0.1.0"
description = "Reference Pipecat voice front-end for agentic frameworks."
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pipecat-ai[cartesia,cli,deepgram,openai,runner,webrtc]>=1.4.0",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
    "websockets>=12",
]

[project.optional-dependencies]
mcp = ["pipecat-ai[mcp]>=1.4.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.12,<1"]

[project.scripts]
agent-voice-bot = "agent_voice_bot.bot:cli_main"
agent-voice-bot-nemohermes-check = "agent_voice_bot.nemohermes:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_voice_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = [".git"]
line-length = 100

[tool.ruff.lint]
select = [
    "D", # Docstring rules
    "I", # Import rules
    "UP", # Modern Python
]
ignore = [
    # Missing-docstring rules are not enforced: this is a reference bot
    "D1",
]

[tool.ruff.lint.per-file-ignores]
# Skip docstring checks for non-source code
"tests/**/*.py" = ["D"]
"evals/**/*.py" = ["D"]
# Skip D104 (missing docstring in public package) for __init__.py files
"**/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
